@@ -579,6 +579,7 @@ xaccTransLookup (const GUID *guid)
 void
 xaccSplitSetBaseValue (Split *s, double value, const char * base_currency)
 {
+   int adjust_price = 0; 
    if (!s) return;
 
    MARK_SPLIT(s);
@@ -592,7 +593,8 @@ xaccSplitSetBaseValue (Split *s, double value, const char * base_currency)
       if (force_double_entry) {
          PERR ("split must have a parent\n");
          assert (s->acc);
-      } else { 
+      } 
+      else { 
         /* if there's already a share-amount set, we need to respect 
          * that and adjust the price to make this balance. */
         if (!DEQEPS(s->damount, 0.0, ZERO_THRESH_VALUE)) {
@@ -605,33 +607,41 @@ xaccSplitSetBaseValue (Split *s, double value, const char * base_currency)
       }
    }
 
+   if(s->acc &&
+      s->acc->security &&
+      safe_strcmp(s->acc->security, s->acc->currency) &&
+      !DEQEPS(s->damount, 0.0, ZERO_THRESH_VALUE)) {
+     adjust_price = 1;
+   }
+
    /* The value of a split depends on the currency we express the
     * value in.  This may or may not require a divide.
     */
    if (!safe_strcmp(s->acc->currency, base_currency)) {
-     if (!DEQEPS(s->damount, 0.0, ZERO_THRESH_VALUE)) {
+     if (adjust_price) {
        DEVIDE(s->share_price, value, s->damount);
      }
      else {
        DEVIDE(s->damount, value, s->share_price);
      }
-   } else 
-   if (!safe_strcmp(s->acc->security, base_currency)) {
-      s->damount = value;   
-   } else 
-   if ((0x0==base_currency) && (0 == force_double_entry)) {
-     if (!DEQEPS(s->damount, 0.0, ZERO_THRESH_VALUE)) {
+   } 
+   else if (!safe_strcmp(s->acc->security, base_currency)) {
+     s->damount     = value;   
+     s->share_price = 1.0;
+   } 
+   else if ((0x0==base_currency) && (0 == force_double_entry)) {
+     if (adjust_price) {
        DEVIDE(s->share_price, value, s->damount);
      }
      else {
        DEVIDE(s->damount, value, s->share_price);
      }
-   } else 
-   {
-      PERR ("inappropriate base currency %s "
-            "given split currency=%s and security=%s\n",
-             base_currency, s->acc->currency, s->acc->security);
-      return;
+   }
+   else {
+     PERR ("inappropriate base currency %s "
+           "given split currency=%s and security=%s\n",
+           base_currency, s->acc->currency, s->acc->security);
+     return;
    }
 }
 
